Update the information architecture

--- a/_pages/resume.html
+++ b/_pages/resume.html
@@ -1,7 +1,7 @@
 ---
 layout: base
 title: About
-permalink: /about
+permalink: /about/resume/
 ---
 <header class="about-header">
     {% comment %} <h1>Fei Liang</h1> {% endcomment %}
